such as Live Check. If you did, it would cause those features to turn off. Now, a minimum value is
enforced internally for all such time values.

* Curator 1.3.1

* Issue 112: WAR creation was mostly broken. Fixed everything and added a filter that redirects / to the
main page. Also, System properties can now be set in addition to the properties file.

1.4.5 - January 9, 2013
=======================
* Issue 103: S3 buckets outside of us-east-1 now require an "endpoint" to be set. For the standalone
version, use the new CLI --s3region <region>. e.g. "--s3region eu-west-1".

1.4.4 - January 2, 2013
=======================
* Issue 94: The standalone version now has a CLI option to load default ZK/Exhibitor config
values. Details here (see --defaultconfig): https://github.com/Netflix/exhibitor/wiki/Running-Exhibitor

* Issue 97: There appear to be some bugs in the JDK with the Preferences API which Exhibitor uses
for Control Panel values, etc. There is now an option to provide an alternate file path to use so
as to work around this. For the standalone version use "--prefspath".

* Issue 98: IE 8 and below don't support Date.now().

1.4.3 - November 26, 2012
=========================
* There was no way to specify Exhibitor port (and REST path) values when using ZooKeeper
as a config provider.

* Added UI widget to open a view on a given instance.

* Depend on ZooKeeper 3.4.5

1.4.2 - October 22, 2012
========================
* The retry policy used internally for connections was configured badly. It could result
in incorrect retry failures.

* Added support for building Exhibitor as a WAR file. Details
here: https://github.com/Netflix/exhibitor/wiki/Building-A-WAR-File

* Added support for JMX monitoring via Servo. Doc will be added on the Github wiki.

* Issue 58: When using ZooKeeper as a configuration source, the internal Curator connection
was not being started and thus the connection was failing.

1.4.0 - October 13, 2012
========================