@@ -11,6 +11,8 @@ enforced internally for all such time values.
 * Issue 112: WAR creation was mostly broken. Fixed everything and added a filter that redirects / to the
 main page. Also, System properties can now be set in addition to the properties file.
 
+* Issue 116: Added a note in the UI that Exhibitor stays latent until the ZK paths are set.
+
 1.4.5 - January 9, 2013
 =======================
 * Issue 103: S3 buckets outside of us-east-1 now require an "endpoint" to be set. For the standalone
